Added padding - removed bg

--- a/common/common.scss
+++ b/common/common.scss
@@ -12,7 +12,7 @@
 // Global styles
 
 html {
-  font-family: "Source Serif Pro", serif;
+  font-family: "Inter", "Source Serif Pro", serif;
   font-size: 16px;
 }
 
